[package]
name = "atomic_value"
version = "0.2.0"
authors = ["Sherlock Holo <sherlockya@gmail.com>"]
edition = "2018"
license = "MIT"
repository = "https://github.com/Sherlock-Holo/atomic_value"
description = "this crate provides a way that you can load or store value atomically like Golang AtomicValue."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[target.'cfg(loom)'.dependencies]
loom = "0.4"
